[tool.poetry]
name = "makesense"
version = "0.1.0"
description = ""
authors = ["Ryuko <ryuko@inbox.lv>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"
msgspec = "^0.18.6"
aiofiles = "23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
